# diff

./: .gitignore  CMakeLists.txt  compile.sh  configure.sh  full.sh  main.cpp  run.sh
inc/: Addition.h  Ceil.h  Derivative.h  Division.h  EigenFunc.h  Factor.h  Group.h  GroupPtr.h  Ln.h  Log.h  Merge.h  Multiplication.h  Negation.h  Newton.h  Number.h  Power.h  Substitute.h  Subtraction.h  Taylor.h  Variable.h
scripts/: configure.sh  format.sh  run.sh
src/: Addition.cpp  Addition.h  Derivative.cpp  Division.cpp  Group.cpp  Group.h  Log.cpp  Multiplication.cpp  Number.cpp  Number.h  Power.cpp  Subtraction.cpp  Taylor.cpp  Variable.cpp
